fix(about section): spacing

--- a/src/App.css
+++ b/src/App.css
@@ -139,6 +139,10 @@
   flex-direction: column;
 }
 
+#clutter {
+  margin-bottom: 10rem;
+}
+
 .section {
   margin-top: 28rem;
 }
